2009-02-08  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (ohshitvb): Remove function prototype.
	* lib/ehandle.c (ohshitvb): Remove function definition.

2009-02-06  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Remove the alternative when
	the last choice is removed, even if we are in manual mode.
	* man/update-alternatives.8: Update the documentation
	accordingly to not be as strong about not touching links in manual
	mode.

2009-02-06  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl (set_links): Remove slavelinks
	if needed as well. We create slave links automatically, we should
	remove them in the same way. Otherwise --config or --set will let
	dangling symlinks on the system.

2009-02-06  Guillem Jover  <guillem@debian.org>

	* man/deb.5: Add detailed information of the currently supported
	format.

2009-02-06  Guillem Jover  <guillem@debian.org>

	* ostable: Add gnu-kopensolaris.
	* triplettable: Add gnu-kopensolaris to kopensolaris mapping.

2009-02-06  Guillem Jover  <guillem@debian.org>

	* ostable: Reindent to make room for longer os names.

2009-02-05  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl (rename_mv): Integrate logic to
	not fail if ENOENT is the reason why the rename failed.

2009-02-05  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Ensure that a broken link
	in automatic mode doesn't lead to the alternative being set
	on manual mode. Also displays by default (and not only
	when --verbose is given) the message that indicates that
	an alternative is switched to manual mode.

2009-02-05  Raphael Hertzog  <hertzog@debian.org>
	    Osamu Aoki <osamu@debian.org>

	* scripts/update-alternatives.pl: Allow --config to continue when
	the currently selected alternative doesn't match the only existing
	one. Useful to be able to recover from a broken configuration.
	Also offer the choice in --config mode to go back the automatic