@@ -133,6 +133,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     we switch to manual mode with --set or --config. Closes: #388313
   * Modify update-alternatives to always remove the alternative group when the last
     alternative is removed (even in manual mode).
+  * Ensure that update-alternative --install fix the links if the alternative
+    installed is the one currently selected. Closes: #100135
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
