@@ -5,6 +5,14 @@
 
 2009-02-06  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Change set_links() to
+	also reset the main alternative link. Add a parameter to
+	make it quiet.
+	When --install reinstalls the current and manually selected entry,
+	let it recreate the symlinks in case something has gone wrong.
+
+2009-02-06  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Remove the alternative when
 	the last choice is removed, even if we are in manual mode.
 	* man/update-alternatives.8: Update the documentation
